--- a/most-recent.html
+++ b/most-recent.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-12-11 Mon 22:00 -->
+<!-- 2023-12-11 Mon 22:12 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>2023-12-11 Emacs news</title>
@@ -204,7 +204,11 @@
 <div id="content" class="content">
 <header>
 <h1 class="title">2023-12-11 Emacs news</h1>
-</header><ul class="org-ul">
+</header><p>
+<span class="timestamp-wrapper"><span class="timestamp">[2023-12-11 Mon] </span></span> Update: added OrgMeetup on Wed Dec 13
+</p>
+
+<ul class="org-ul">
 <li>Help wanted:
 <ul class="org-ul">
 <li><a href="https://www.reddit.com/r/emacs/comments/18d8aqr/please_contribute_to_treesitter_based_javascript/">Please contribute to Tree-Sitter based JavaScript and TypeScript Modes in GNU Emacs core</a></li>
@@ -212,6 +216,7 @@
 </ul></li>
 <li>Upcoming events:
 <ul class="org-ul">
+<li>OrgMeetup (virtual) <a href="https://emacs.ch/@yantar92/111549860162341841">https://emacs.ch/@yantar92/111549860162341841</a> Wed Dec 13 0800 America/Vancouver - 1000 America/Chicago - 1100 America/Toronto - 1600 Etc/GMT - 1700 Europe/Berlin - 2130 Asia/Kolkata &#x2013; Thu Dec 14 0000 Asia/Singapore</li>
 <li>EmacsSF (in person): Holiday Party for Parenthesis Lovers <a href="https://www.meetup.com/emacs-sf/events/297781144/">https://www.meetup.com/emacs-sf/events/297781144/</a> Wed Dec 13 1800 America/Los_Angeles</li>
 <li>Mastering Emacs book club <a href="https://susam.net/maze/meet/mastering-emacs/">https://susam.net/maze/meet/mastering-emacs/</a> Fri Dec 15 1200 America/Vancouver - 1400 America/Chicago - 1500 America/Toronto - 2000 Etc/GMT - 2100 Europe/Berlin &#x2013; Sat Dec 16 0130 Asia/Kolkata - 0400 Asia/Singapore</li>
 <li>Mastering Emacs book club <a href="https://susam.net/maze/meet/mastering-emacs/">https://susam.net/maze/meet/mastering-emacs/</a> Sat Dec 16 0200 America/Vancouver - 0400 America/Chicago - 0500 America/Toronto - 1000 Etc/GMT - 1100 Europe/Berlin - 1530 Asia/Kolkata - 1800 Asia/Singapore</li>
