--- a/most-recent.html
+++ b/most-recent.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-02-05 Mon 15:20 -->
+<!-- 2024-02-05 Mon 15:21 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>2024-02-05 Emacs news</title>
@@ -204,7 +204,7 @@
 <div id="content" class="content">
 <header>
 <h1 class="title">2024-02-05 Emacs news</h1>
-</header><div class="update" id="org2f57080">
+</header><div class="update" id="org29970d2">
 <p>
 <span class="timestamp-wrapper"><span class="timestamp">[2024-02-05 Mon] </span></span> Added link to org-link-github.
 </p>
