--- a/most-recent.html
+++ b/most-recent.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-02-26 Mon 17:41 -->
+<!-- 2024-02-26 Mon 17:44 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>2024-02-26 Emacs news</title>
@@ -299,7 +299,7 @@
 </ul></li>
 <li>Multimedia:
 <ul class="org-ul">
-<li><a href="https://www.reddit.com/r/emacs/comments/1az1l50/how_to_play_media_on_emacs_linux_and_android/">How to play media on Emacs (Linux and Android) using MPV</a></li>
+<li><a href="https://github.com/danijelcamdzic/dotemacs/#mpv">How to play media on Emacs (Linux and Android) using MPV</a> (<a href="https://www.reddit.com/r/emacs/comments/1az1l50/how_to_play_media_on_emacs_linux_and_android/">Reddit</a>)</li>
 <li><a href="https://github.com/alphapapa/listen.el">listen.el: Audio/music player for Emacs</a> (<a href="https://www.reddit.com/r/emacs/comments/1aw4ton/listenel_audiomusic_player_for_emacs/">Reddit</a>)</li>
 <li><a href="https://michal.sapka.me/emacs/watching-youtube-with-emacs/">Michal Sapka: Emacs: watching YouTube with Yeetube and mpv</a></li>
 </ul></li>
