--- a/most-recent.html
+++ b/most-recent.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-03-11 Mon 19:46 -->
+<!-- 2024-03-11 Mon 19:52 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>2024-03-11 Emacs news</title>
@@ -214,7 +214,7 @@
 </ul></li>
 <li>Emacs configuration:
 <ul class="org-ul">
-<li></li>
+<li><a href="https://emacs.ch/@pkal/112071203615073146">Noticed that GNU ELPA and NonGNU ELPA now have percentile ranks - @pkal@emacs.ch</a></li>
 <li><a href="https://andreyor.st/posts/2024-03-05-accepting-your-own-solutions-to-your-own-problems/">Andrey Listopadov: Accepting your own solutions to your own problems</a></li>
 <li><a href="https://github.com/deadblackclover/clover/releases/tag/v1.3.0">deadblackclover's Emacs config update: updated theme, added emms and multiple-cursors</a></li>
 <li><a href="https://www.youtube.com/watch?v=KZA6tojsGfU">Xah Talk Show Ep541, emacs org-mode key, WolframLang tiling, plane curves, math</a> (01:14:25)</li>
