--- a/most-recent.html
+++ b/most-recent.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-03-18 Mon 18:38 -->
+<!-- 2024-03-18 Mon 19:28 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>2024-03-18 Emacs news</title>
@@ -342,13 +342,13 @@
 </ul></li>
 <li>New packages:
 <ul class="org-ul">
-<li><a target="_blank" href="http://melpa.org/#/bril-mode">bril-mode</a>: Major mode for Bril text format (MELPA)</li>
-<li><a target="_blank" href="http://melpa.org/#/dired-auto-readme">dired-auto-readme</a>: Auto-display README file in Dired buffers (MELPA)</li>
-<li><a target="_blank" href="http://melpa.org/#/dired-hist">dired-hist</a>: Traverse Dired buffer history: back, forward (MELPA)</li>
-<li><a target="_blank" href="http://melpa.org/#/elisa">elisa</a>: Emacs Lisp Information System Assistant (MELPA)</li>
+<li>bril-mode: Major mode for Bril text format (MELPA)</li>
+<li>dired-auto-readme: Auto-display README file in Dired buffers (MELPA)</li>
+<li>dired-hist: Traverse Dired buffer history: back, forward (MELPA)</li>
+<li>elisa: Emacs Lisp Information System Assistant (MELPA)</li>
 <li><a target="_blank" href="https://elpa.gnu.org/packages/mpdired.html">mpdired</a>: A dired-like client for Music Player Daemon (GNU ELPA)</li>
-<li><a target="_blank" href="http://melpa.org/#/sops">sops</a>: SOPS encrypt and decrypt without leaving the editor (MELPA)</li>
-<li><a target="_blank" href="http://melpa.org/#/sqlite-mode-extras">sqlite-mode-extras</a>: Extensions for sqlite-mode (MELPA)</li>
+<li>sops: SOPS encrypt and decrypt without leaving the editor (MELPA)</li>
+<li>sqlite-mode-extras: Extensions for sqlite-mode (MELPA)</li>
 </ul></li>
 </ul>
 
