STARTED 2026-02-23 Emacs news

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2026-02-23 Mon 14:40 -->
+<!-- 2026-02-23 Mon 14:41 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Emacs News</title>
@@ -204,9 +204,9 @@
 <div id="content" class="content">
 <header>
 <h1 class="title">Emacs News</h1>
-</header><div id="outline-container-orgcf19afb" class="outline-2">
-<h2 id="orgcf19afb"><span class="todo STARTED">STARTED</span> 2026-02-23 Emacs news</h2>
-<div class="outline-text-2" id="text-orgcf19afb">
+</header><div id="outline-container-orgf5c8e37" class="outline-2">
+<h2 id="orgf5c8e37"><span class="todo STARTED">STARTED</span> 2026-02-23 Emacs news</h2>
+<div class="outline-text-2" id="text-orgf5c8e37">
 <p>
 Org Mode is a big part of why I enjoy Emacs, so I'm delighted that there's a new release out (<a href="https://list.orgmode.org/orgmode/87cy1xalan.fsf@localhost/">Org 9.8</a>). Thanks to all who contributed! If you would like to help out, Ihor is looking for <a href="https://orgmode.org/worg/org-maintenance.html#org073fcb4">several volunteers</a> who can try to reproduce bugs and do initial feedback on the new patches.
 </p>
